--- a/Truth Table/Truth Table.vcxproj
+++ b/Truth Table/Truth Table.vcxproj
@@ -141,6 +141,9 @@
   <ItemGroup>
     <ClCompile Include="TruthTable.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Truth_Tab.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
